# agentspec

./: .env.example  .gitignore  AGENTS.md  BREATHE_LABS_CONTEXT.md  DEMO.md  LICENSE  Makefile  README.md  demo.sh  pyproject.toml
agentspec/: cli.py
docs/: logic-diagram.md
examples/event-scout/: agentspec.yaml  event_scout.py
tests/: test_agentspec.py
